tests/baselines/reference/exportSpecifierForAGlobal.errors.txt
b.ts(1,9): error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.
b.ts(4,12): error TS2454: Variable 'x' is used before being assigned.


==== a.d.ts (0 errors) ====
    declare class X { }
    
==== b.ts (2 errors) ====
    export {X};
            ~
!!! error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.
    export function f() {
        var x: X;
        return x;
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
    } 
    